--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,8 +1,8 @@
-{% if frontend_list %}
+{% if latest_question_list %}
     <ul>
-    {% for question in frontend_list %}
-        <!-- <li><a href="/polls/{{ question.id }}/">{{ question.question_text }}</a></li> -->
-        <li><a href="{% url 'detail' question.id %}">{{ question.question_text }}</a></li>
+    {% for question in latest_question_list %}
+        <!-- {# <li><a href="/polls/{{ question.id }}/">{{ question.question_text }}</a></li> #} -->
+        <li><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a></li>
     {% endfor %}
     </ul>
 {% else %}
