--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -1,3 +1,8 @@
+{% extends 'polls/base.html' %}
+
+{% block content %}
+
+
 <!-- {# {{ question }} #}
 
 
@@ -20,3 +25,5 @@
     </fieldset>
     <input type="submit" value="Vote">
 </form>
+
+{% endblock %}
