--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,6 +1,8 @@
-{% load static %}
+{% extends 'polls/base.html' %}
 
-<link rel="stylesheet" href="{% static 'polls/style.css' %}">
+{% block content %}
+
+
 
 {% if latest_question_list %}
     <ul>
@@ -12,3 +14,5 @@
 {% else %}
     <p>No polls are available.</p>
 {% endif %}
+
+{% endblock %}
